--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <div>
         <h1 class="cmntHere">Comment Page</h1>
+        <p class="cmntHere">Responsiveness design made for Desktop only.</p>
         <div class="parent">
             <img class="img1"
                 src="https://lh3.googleusercontent.com/pw/ADCreHeQ7S-Fmdd_fFXxHJ2pBnbxcv6Qx5ig-efRcv4ggC-1gsNm_ppnv_rpXhhzXyIT7WXlWsG7sK4Rgy1C12qOe0AhwB5k1mffWvQi1gw4HM5yMg1WSDU=w2400"
